fix(Carousel): fixing container styles, adding border-radius for all images, making scroll invisible

--- a/frontend/fe-digital-booking/src/pages/Product/components/Carousel/Carousel.module.scss
+++ b/frontend/fe-digital-booking/src/pages/Product/components/Carousel/Carousel.module.scss
@@ -1,13 +1,13 @@
 @use '../../../../styles/variables' as *;
 
 .carousel-container {
-  padding: 40px;
   width: 100%;
 }
 
 .product-image-container {
   display: flex;
-  width: 100%;
+  width: 100vw;
+  margin-left: -10px;
   position: relative;
   height: 100%;
   max-height: 280px;
@@ -15,23 +15,29 @@
   img {
     width: 100%;
     height: 100%;
-    border-radius: 5%;
-    padding: 5px;
-    height: 100%;
     max-height: 280px;
   }
 }
 
+.product-image-left {
+  img {
+    border-radius: 10px;
+  }
+}
 .product-image-right {
   display: grid;
+  gap: 8px 10px;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
+  img {
+    border-radius: 10px;
+  }
 }
 
 .button {
   position: absolute;
-  right: 25px;
-  bottom: 25px;
+  right: 20px;
+  bottom: 15px;
   color: $color-white;
   text-decoration: underline;
   font-weight: 700;
@@ -48,9 +54,26 @@
 @media (min-width: $md) {
   .product-image-container {
     max-height: 450px;
+    margin-left: -30px;
 
     img {
       max-height: 450px;
+    }
+  }
+}
+
+@media (min-width: $lg) {
+  .carousel-container {
+    margin-top: 50px;
+    .product-image-container {
+      width: 100%;
+      max-height: 100%;
+      margin-left: 0;
+      gap: 10px;
+
+      img {
+        max-height: 100%;
+      }
     }
   }
 }
